Add Transactions handler. Add invites API (#2)
* Users Service v1

* Add Transactions handler

* remove prints

* update linters job
